cmake_minimum_required(VERSION 2.6)
PROJECT(vmtests)

#make the list with all the source files
FILE(GLOB_RECURSE SOURCES "${CRTMPSERVER_SOURCES_ROOT}/vmtests/src/*.cpp" )

#prepare the include directories
INCLUDE_DIRECTORIES(
	${OPENSSL_INCLUDE_PATH}
	${LUA_INCLUDE_PATH}
	${V8_INCLUDE_PATH}
	${CRTMPSERVER_SOURCES_ROOT}/vmtests/include
	${CRTMPSERVER_SOURCES_ROOT}/vm/include
	${CRTMPSERVER_SOURCES_ROOT}/common/include
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
TARGET_LINK_LIBRARIES(
	${PROJECT_NAME} 
	common 
	vm 
	${DL_LIBRARY_PATH} 
	${V8_LIBRARY_PATH} 
	${OPENSSL_LIBRARY_PATH} 
	${CRYPTO_LIBRARY_PATH} 
	${Z_LIBRARY_PATH}
	${TINYXML_LIBRARY_PATH} 
	${LUA_LIBRARY_PATH})
ADD_PRECOMPILED_HEADER(${PROJECT_NAME} "${CRTMPSERVER_SOURCES_ROOT}/common/include/common.h")

